--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-pagejs-routing-example",
+  "name": "svelte-router-template",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
@@ -18,11 +18,12 @@
     "sirv-cli": "^0.3.1"
   },
   "dependencies": {
+    "firebase": "7.13.2",
     "lodash": "^4.17.15",
     "page": "1.11.5",
     "sirv-cli": "^0.4.4",
     "svelte": "3.17.1"
   },
   "keywords": [],
-  "description": "Demo of my recent article published at https://jackwhiting.co.uk/posts/refactoring-our-router-within-svelte/"
+  "description": ""
 }
